// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EditBounce default bounce toggle renders correctly toggle when all conditions are true 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      bottom={true}
      content="When this is set to \\"ON\\", all future transmissions will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      forcePosition={false}
      horizontalOffset="0px"
      preferredDirection={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      right={true}
    >
      Use this domain as your default bounce domain? 
      <Icon
        name="Help"
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce does not show root domain warning for 3rd level domain 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <React.Fragment>
    <Left>
      <p>
        <strong>
          To use this domain for bounces
        </strong>
        , add this CNAME record to your DNS settings.
      </p>
      <p>
        <em>
          Note: Bounce domains must be verified via DNS.
        </em>
      </p>
    </Left>
    <Right>
      <Panel
        actions={
          Array [
            Object {
              "content": "Verify CNAME Record",
              "disabled": false,
              "onClick": [Function],
            },
          ]
        }
        sectioned={true}
        title="DNS Settings"
      >
        <LabelledValue
          label="Type"
        >
          <p>
            CNAME
          </p>
        </LabelledValue>
        <LabelledValue
          label="Hostname"
        >
          <p>
            c.b.a.com
          </p>
        </LabelledValue>
        <LabelledValue
          label="Value"
        >
          <p>
            sparkpostmail.com
          </p>
        </LabelledValue>
      </Panel>
    </Right>
  </React.Fragment>
</SendingDomainSection>
`;

exports[`Component: EditBounce renders not ready correctly 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <React.Fragment>
    <Left>
      <p>
        <strong>
          To use this domain for bounces
        </strong>
        , add this CNAME record to your DNS settings.
      </p>
      <p>
        <em>
          Note: Bounce domains must be verified via DNS.
        </em>
      </p>
    </Left>
    <Right>
      <Banner
        status="warning"
      >
        We strongly recommend using a subdomain such as 
        <strong>
          bounces.
          xyz.com
        </strong>
         for bounce domains. 
        <Link
          replace={false}
          to="/account/sending-domains/create"
        >
          Create a new domain now.
        </Link>
      </Banner>
      <Panel
        actions={
          Array [
            Object {
              "content": "Verify CNAME Record",
              "disabled": false,
              "onClick": [Function],
            },
          ]
        }
        sectioned={true}
        title="DNS Settings"
      >
        <LabelledValue
          label="Type"
        >
          <p>
            CNAME
          </p>
        </LabelledValue>
        <LabelledValue
          label="Hostname"
        >
          <p>
            xyz.com
          </p>
        </LabelledValue>
        <LabelledValue
          label="Value"
        >
          <p>
            sparkpostmail.com
          </p>
        </LabelledValue>
      </Panel>
    </Right>
  </React.Fragment>
</SendingDomainSection>
`;

exports[`Component: EditBounce renders ready correctly 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <React.Fragment>
    <Left />
    <Right>
      <Banner
        status="warning"
      >
        We strongly recommend using a subdomain such as 
        <strong>
          bounces.
          xyz.com
        </strong>
         for bounce domains. 
        <Link
          replace={false}
          to="/account/sending-domains/create"
        >
          Create a new domain now.
        </Link>
      </Banner>
      <Panel
        sectioned={true}
      >
        <p>
          <VerifiedIcon />
           This domain is ready to be used as a bounce domain.
        </p>
      </Panel>
    </Right>
  </React.Fragment>
</SendingDomainSection>
`;

exports[`Component: EditBounce verifyDomain renders loading state correctly 1`] = `
Array [
  Object {
    "content": "Verifying...",
    "disabled": true,
    "onClick": [Function],
  },
]
`;
